--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/jarvissuperuser/nodewebapp/issues"
   },
-  "homepage": "https://github.com/jarvissuperuser/nodewebapp#readme"
+  "homepage": "https://github.com/jarvissuperuser/nodewebapp#readme",
+  "dependencies": {
+    "fs-extra": "^7.0.0",
+    "sqlite": "^2.9.2"
+  }
 }
